--- a/reMIND/Base.lproj/Main.storyboard
+++ b/reMIND/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -48,6 +49,9 @@
                                         <constraint firstItem="bIJ-ou-aEq" firstAttribute="centerY" secondItem="3Ef-bN-QwE" secondAttribute="centerY" id="pYA-7P-oXT"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="wfV-X9-pFW" kind="show" id="Yuh-SX-BlA"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -55,11 +59,90 @@
                             <outlet property="delegate" destination="zH7-gu-3TT" id="aao-a1-HT1"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="reMIND" id="EJK-DU-B5T"/>
+                    <navigationItem key="navigationItem" title="reMIND" id="EJK-DU-B5T">
+                        <barButtonItem key="rightBarButtonItem" image="icon-add" id="3Lf-tb-a2w">
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OMR-TB-7Gs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1012" y="-19.340329835082461"/>
+        </scene>
+        <!--Collection View Controller-->
+        <scene sceneID="8QG-Sb-9gB">
+            <objects>
+                <collectionViewController id="wfV-X9-pFW" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="NSd-DM-q8f">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="EhM-kA-MHz">
+                            <size key="itemSize" width="90" height="90"/>
+                            <size key="headerReferenceSize" width="50" height="80"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="29I-Ub-Y2i">
+                                <rect key="frame" x="10" y="90" width="90" height="90"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wrj-2i-gnu">
+                                            <rect key="frame" x="10" y="64" width="70" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_no_icon" translatesAutoresizingMaskIntoConstraints="NO" id="fb4-ez-tbz">
+                                            <rect key="frame" x="20" y="10" width="50" height="50"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="50" id="TaJ-50-Ila"/>
+                                                <constraint firstAttribute="width" constant="50" id="mle-UM-s0X"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="fb4-ez-tbz" firstAttribute="centerX" secondItem="29I-Ub-Y2i" secondAttribute="centerX" id="329-Tc-jXj"/>
+                                    <constraint firstAttribute="trailing" secondItem="wrj-2i-gnu" secondAttribute="trailing" constant="10" id="5rS-VN-CJ0"/>
+                                    <constraint firstAttribute="bottom" secondItem="wrj-2i-gnu" secondAttribute="bottom" constant="5" id="KkN-Ht-K2n"/>
+                                    <constraint firstItem="wrj-2i-gnu" firstAttribute="leading" secondItem="29I-Ub-Y2i" secondAttribute="leading" constant="10" id="WZG-8v-QnJ"/>
+                                    <constraint firstItem="fb4-ez-tbz" firstAttribute="top" secondItem="29I-Ub-Y2i" secondAttribute="top" constant="10" id="rJB-pE-aor"/>
+                                </constraints>
+                            </collectionViewCell>
+                        </cells>
+                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="95S-42-jTF">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kW1-E1-hPf">
+                                    <rect key="frame" x="44" y="28" width="287" height="24"/>
+                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" red="0.84705882352941175" green="0.84705882352941175" blue="0.84705882352941175" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstItem="kW1-E1-hPf" firstAttribute="leading" secondItem="95S-42-jTF" secondAttribute="leadingMargin" constant="36" id="bAg-9r-wdt"/>
+                                <constraint firstItem="kW1-E1-hPf" firstAttribute="top" secondItem="95S-42-jTF" secondAttribute="topMargin" constant="20" id="iDS-6M-gPe"/>
+                                <constraint firstAttribute="trailingMargin" secondItem="kW1-E1-hPf" secondAttribute="trailing" constant="36" id="iNR-n9-3KJ"/>
+                                <constraint firstAttribute="bottomMargin" secondItem="kW1-E1-hPf" secondAttribute="bottom" constant="20" id="n2I-bu-vak"/>
+                            </constraints>
+                        </collectionReusableView>
+                        <connections>
+                            <outlet property="dataSource" destination="wfV-X9-pFW" id="MpC-Bs-FHO"/>
+                            <outlet property="delegate" destination="wfV-X9-pFW" id="Kvg-eG-CBg"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="geh-Gk-GR6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1800.8" y="-19.340329835082461"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="u67-lU-TXi">
@@ -85,6 +168,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="icon-add" width="22" height="22"/>
         <image name="img_no_icon" width="50" height="50"/>
     </resources>
 </document>
